  - Fixed defect #890 Other_HD created for non-HD movie
  - Enhancement  #900 Skip index generation and writing of HTML files for external front end users
  - Fixed defect #903 Kinopoisk fixes after site update
  - Enhancement  #905 API Key enhancements
  - Fixed defect #909 Index 2000-2009 is not correct
  - Fixed defect #911 Cover art files not overwritten
  - Fixed defect #927 Writers are not detected if there is only one

MovieJukebox 1.0.17 beta
------------------------
  - Enhancement  #218 Play button on remote for multipart movies
  - Enhancement  #226 Additional indexes by actor, director, and country; provide links to these index pages on movie details page
                      Extra parameters to fine-tune index generation: mjb.categories.indexList, displayList, and minCategoryCount
  - Enhancement  #311 A playlist is now generated for all movies (even if there's only one file), and it is customizable via playlist.xsl
  - Enhancement  #411 Plugin for Dutch movie database (www.moviemeter.nl)
  - Enhancement  #455 Split HD Category into 720p and 1080p
  - Enhancement  #462 Enable/disable Year and Certification rating in index page of all skins. New skin-options.xsl file.
  - Enhancement  #465 Play All link at beginning of playlist instead of end
  - Fixed defect #475 Correctly display index pages when mjb.nbThumbnailsPerLine=1
  - Enhancement  #498 AppleTrailer download control for trailer types
  - Enhancement  #507 Properties can be overridden at the command line
  - Fixed defect #565 FilmAffinity ID ignored
  - Fixed defect #581 gfb skin's links to genres from movie details pages were broken for filtered genres
  - Fixed defect #586 Reverse sort order ignored for sd, gfb107, and gfb107-sd skins
  - Enhancement  #631 Ability to limit number of Apple trailers per movie
  - Fixed defect #636 (Regression) Check for file-based subtitles
  - Fixed defect #644 Directory fanart not found on POSIX systems