@@ -31,6 +31,7 @@ MovieJukebox 1.0.18 beta
   - Enhancement  #905 API Key enhancements
   - Fixed defect #909 Index 2000-2009 is not correct
   - Fixed defect #911 Cover art files not overwritten
+  - Fixed defect #925 Exclude not working for directories
   - Fixed defect #927 Writers are not detected if there is only one
 
 MovieJukebox 1.0.17 beta
